--- a/api/app.yaml
+++ b/api/app.yaml
@@ -1,4 +1,4 @@
-application: forms
+application: api
 version: 1
 runtime: python27
 api_version: 1
@@ -9,19 +9,9 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: /static/(.*)
-  static_files: static/\1
-  upload: static/
-
-- url: /everything.*
-  script: api.app
-
 - url: .*
   script: main.app
-
 
 libraries:
 - name: webapp2
   version: "2.5.2"
-- name: jinja2
-  version: latest
