--- a/api/app.yaml
+++ b/api/app.yaml
@@ -9,7 +9,9 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: .*
+
+
+- url: /finalproject.*
   script: main.app
 
 libraries:
