--- a/finalProj/app.yaml
+++ b/finalProj/app.yaml
@@ -8,6 +8,9 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+- url: /static/(.*)
+  static_files: static/\1
+  upload: static
 
 - url: .*
   script: main.app
